# roguelike-cmake

./: CMakeLists.txt  README.md  patterns.md
docs/superpowers/plans/: 2026-03-19-phase3-enemies.md  2026-03-23-phase4-xp-fogofwar.md  2026-03-26-phase5-itens.md
docs/superpowers/specs/: 2026-03-19-phase3-enemies-design.md  2026-03-23-phase4-xp-fogofwar-design.md  2026-03-26-phase5-itens-design.md
src/: main.cpp
src/core/: Game.cpp  Game.hpp
src/entities/: Enemy.cpp  Enemy.hpp  EnemyFactory.cpp  EnemyFactory.hpp  Entity.cpp  Entity.hpp  Goblin.cpp  Goblin.hpp  Player.cpp  Player.hpp  Troll.cpp  Troll.hpp
src/items/: AumentarATKStrategy.cpp  AumentarATKStrategy.hpp  BonusDefStrategy.cpp  BonusDefStrategy.hpp  CuraStrategy.cpp  CuraStrategy.hpp  Inventario.cpp  Inventario.hpp  Item.cpp  Item.hpp  ItemFactory.cpp  ItemFactory.hpp  ItemStrategy.hpp
src/map/: Map.cpp  Map.hpp  Room.cpp  Room.hpp
src/observers/: LogObserver.cpp  LogObserver.hpp  Observer.hpp  StatsObserver.cpp  StatsObserver.hpp
src/ui/: Renderer.cpp  Renderer.hpp
